[gd_scene load_steps=5 format=3 uid="uid://bpthn3jq0wwqs"]

[ext_resource type="Script" path="res://scripts/laser.gd" id="1_w0nta"]
[ext_resource type="Texture2D" uid="uid://dev02143k6klc" path="res://assets/red_glow.png" id="2_7w5ds"]

[sub_resource type="Curve" id="Curve_c44mh"]
_data = [Vector2(0, 0.961947), 0.0, 0.0, 0, 0, Vector2(0.612646, 0.951327), 0.0, 0.0, 0, 0, Vector2(0.99331, 0.0274336), -0.14646, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_lvh32"]
offsets = PackedFloat32Array(0, 0.63587, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Laser" type="RayCast2D"]
target_position = Vector2(1200, 0)
collision_mask = 4
script = ExtResource("1_w0nta")
LASER_WIDTH = 2.0
TWEEN_APPEAR_TIME = 0.1
TWEEN_DISAPPEAR_TIME = 0.2
DAMAGE = 1.0

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 100, 0)
width = 4.0
default_color = Color(0.929412, 0.184314, 0.196078, 1)

[node name="CastingParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = true
texture = ExtResource("2_7w5ds")
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 60.0
scale_amount_min = 0.25
scale_amount_max = 0.25
scale_amount_curve = SubResource("Curve_c44mh")
color_ramp = SubResource("Gradient_lvh32")

[node name="CollisionParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = true
texture = ExtResource("2_7w5ds")
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 60.0
scale_amount_min = 0.25
scale_amount_max = 0.25
scale_amount_curve = SubResource("Curve_c44mh")
color_ramp = SubResource("Gradient_lvh32")

[node name="BeamParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.3
texture = ExtResource("2_7w5ds")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 60.0
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_amount_min = 0.25
scale_amount_max = 0.25
scale_amount_curve = SubResource("Curve_c44mh")
color_ramp = SubResource("Gradient_lvh32")
